--- a/challenger_movies/Base.lproj/Main.storyboard
+++ b/challenger_movies/Base.lproj/Main.storyboard
@@ -139,28 +139,67 @@
                     <navigationItem key="navigationItem" title="Filmes" id="kFX-XU-RPT"/>
                     <connections>
                         <outlet property="tableViewMovies" destination="Mb4-hi-6VH" id="f0V-wJ-xER"/>
-                        <segue destination="PqH-Hf-GbF" kind="presentation" id="6Ic-MQ-2J2"/>
+                        <segue destination="PqH-Hf-GbF" kind="presentation" identifier="segueDetailMovie" id="6Ic-MQ-2J2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ucs-1t-EsY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1092.753623188406" y="851.78571428571422"/>
         </scene>
-        <!--View Controller-->
+        <!--Detail View Controller-->
         <scene sceneID="Jv8-TD-8lo">
             <objects>
-                <viewController id="PqH-Hf-GbF" sceneMemberID="viewController">
+                <viewController id="PqH-Hf-GbF" customClass="DetailViewController" customModule="challenger_movies" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="s60-fE-9Qf">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LuX-92-g5h">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="263"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pvV-aX-ZD8">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="263"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="PcT-zZ-ajE">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="263"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                </view>
+                                <blurEffect style="regular"/>
+                            </visualEffectView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Mh1-yM-Jbm">
+                                <rect key="frame" x="128" y="167" width="158" height="180"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Titulo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lsr-y3-s75">
+                                <rect key="frame" x="20" y="392" width="374" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Descrição" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GDM-y2-q7P">
+                                <rect key="frame" x="20" y="442" width="374" height="95"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="q1h-Uz-sII"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="KHR-Ls-HPr"/>
+                    <connections>
+                        <outlet property="imageBackground" destination="LuX-92-g5h" id="Fbk-b6-4oq"/>
+                        <outlet property="imageMain" destination="Mh1-yM-Jbm" id="BQL-0R-JY1"/>
+                        <outlet property="labelDescription" destination="GDM-y2-q7P" id="pSq-h5-syF"/>
+                        <outlet property="labelTitle" destination="lsr-y3-s75" id="z1q-dq-CsD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tb9-cc-ta5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1996" y="852"/>
+            <point key="canvasLocation" x="1995.6521739130437" y="851.78571428571422"/>
         </scene>
         <!--Configuração-->
         <scene sceneID="WAl-gd-odJ">
